syntax = "proto3";
import "User.proto";
option java_multiple_files = true;
package sdj.project.eventcalendar.protobuf;

message Event {
  int64 event_id=1;
  string name = 2;
  string bodytext = 3;
  string startTime = 4;
  string endTime = 5;
  string address = 6;
  User creator = 7;
  bool isCompleted = 8;
}

message JoinedEvents{
  int64 user_id=1;
  int64 event_id=2;
}

message Empty {

}



service GRPCEventService {

  rpc RPCGetListOfUsersinEvent(Event) returns (stream User) {}

  rpc RPCGetListofCreatedEvents(User) returns (stream Event){}

  rpc RPCGetListOfJoinedEvents(User) returns (stream Event){}

  rpc RPCGetListOfEvents(User) returns (stream Event){}

  rpc RPCAddUserToEvent(JoinedEvents) returns (Empty){}

  rpc RPCRemoveUserFromEvent(JoinedEvents) returns (Empty){}

  rpc RPCAddEventToUser(JoinedEvents) returns (Empty){}

  rpc RPCRemoveEventFromUser(JoinedEvents) returns (Empty){}



  rpc RPCfindEventById(Event) returns (Event);


  rpc RPCsaveEvent(Event) returns (Event);


  rpc RPCupdateEvent(Event) returns (Event);


  rpc RPCdeleteEvent(Event) returns (Event);
}