syntax = "proto3";

option java_multiple_files = true;
option java_package= "protobuf.sdj3";

message User {
  string name=1;
  string password=2;

}
message Event {
  string eventName = 1;
  string startTime = 2;
  string endTime = 3;
}

message EventList{
  Event event = 1;
}
message FindEventRequest {
  string eventName = 1;

}
service CoreServices{
  rpc GetEvents(User) returns (EventList) {};

}